[project]
name = "linkedin-scraper"
version = "0.1.0"
description = "A LinkedIn scraping tool to extract cookies, profile links, and emails."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "selenium>=4.0.0",
    "pandas>=1.3.0"
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
linkedin-scraper = "main:main"
